fix bug where background mask was being disabled on safari broswers when another mask was present

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -13,7 +13,9 @@
   background-position: left top, right top;
   background-repeat: repeat-y;
   background-size: 49.9% auto;
-  background-blend-mode: overlay;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.76);
+  /* box-shadow is used instead of background-blend-mode due to a quick with
+  background-blend-mode not playing nice with masks in safari browser */
 }
 
 .page__content {
